k8s/ingress/IngressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-class
spec:
  controller: k8s.io/ingress-nginx
