k8s/ingress/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nach-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: ingress
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
